# hydro-kernel

./: Cargo.toml  justfile  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/advection/: Cargo.toml
crates/advection/src/: lib.rs
crates/boundary-conditions/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/driver/: Cargo.toml
crates/equations/: Cargo.toml
crates/kernel-core/: Cargo.toml
crates/pressure-solver/: Cargo.toml
crates/time-integration/: Cargo.toml
crates/vertical-physics/: Cargo.toml
crates/vertical-physics/src/: lib.rs
examples/: smoke.rs
input/: circular_lake.msh2  coastal_island.msh2  elliptical_lagoon.msh2  meandering_river.msh2  polygon_estuary.msh2  rectangle.msh2  rectangle_quad.msh2  rectangular_channel.msh2  rectangular_channel_quad.msh2  triangular_basin.msh2
src/: lib.rs
src/input_output/: gmsh_parser.rs  mod.rs
